// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inspector Data View component should render empty state 1`] = `
<div
  class="euiPanel euiPanel--transparent euiEmptyPrompt emotion-euiPanel-m-transparent-euiEmptyPrompt-vertical"
>
  <div
    class="euiEmptyPrompt__main emotion-euiEmptyPrompt__main-vertical-l"
  >
    <div
      class="euiEmptyPrompt__content emotion-euiEmptyPrompt__content-vertical"
    >
      <h2
        class="euiTitle emotion-euiTitle-m"
      >
        No data available
      </h2>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        class="euiText emotion-euiText-m-euiTextColor-subdued"
      >
        <p>
          The element did not provide any data.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Inspector Data View component should render loading state 1`] = `
<Suspense
  fallback={
    <div>
      loading
    </div>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
>
  <Component
    adapters={
      Object {
        "tables": TablesAdapter {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "_tables": Object {},
          Symbol(shapeMode): false,
          Symbol(kCapture): false,
        },
      }
    }
    title="Test Data"
  />
  <div>
    loading
  </div>
</Suspense>
`;

exports[`Inspector Data View component should render single table without selector 1`] = `
Array [
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="inspectorDownloadData"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-s-defaultMinWidth-base-primary"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            Download CSV
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />,
  <div
    class="euiBasicTable insDataTableFormat__table eui-xScroll css-1f59z3t"
    data-test-subj="inspectorTable"
  >
    <div>
      <div
        class="euiTableHeaderMobile"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-l-spaceBetween-baseline-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          />
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiTableSortMobile"
            >
              <div
                class="euiPopover emotion-euiPopover-inline-block"
              >
                <button
                  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-right"
                  type="button"
                >
                  <span
                    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                  >
                    <span
                      class="eui-textTruncate euiButtonEmpty__text"
                    >
                      Sorting
                    </span>
                    <span
                      color="inherit"
                      data-euiicon-type="arrowDown"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <table
        class="euiTable css-0 euiTable--responsive euiTable--auto"
        id="__table_generated-id"
        tabindex="-1"
      >
        <caption
          class="euiTableCaption emotion-euiScreenReaderOnly"
        />
        <thead>
          <tr>
            <th
              aria-live="polite"
              aria-sort="none"
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_1_0"
              role="columnheader"
              scope="col"
            >
              <button
                class="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                type="button"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                  >
                    column1
                  </span>
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="euiTableRow"
          >
            <td
              class="euiTableRowCell euiTableRowCell--middle"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                column1
              </div>
              <div
                class="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <div
                  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
                >
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    123
                  </div>
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    <div
                      class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-center-row"
                    />
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <button
              class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
              data-test-subj="tablePaginationPopoverButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  Rows per page: 20
                </span>
                <span
                  color="inherit"
                  data-euiicon-type="arrowDown"
                />
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <nav
            aria-label="Pagination for table: "
            class="euiPagination emotion-euiPagination"
          >
            <span
              aria-atomic="true"
              aria-relevant="additions text"
              class="emotion-euiScreenReaderOnly"
              role="status"
            >
              Page 1 of 1
            </span>
            <button
              aria-label="Previous page"
              class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
              data-test-subj="pagination-button-previous"
              disabled=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowLeft"
              />
            </button>
            <ul
              aria-label="Pagination for table: "
              class="euiPagination__list emotion-euiPagination__list"
            >
              <li
                class="euiPagination__item"
              >
                <button
                  aria-controls="__table_generated-id"
                  aria-current="true"
                  aria-label="Page 1 of 1"
                  class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
                  data-test-subj="pagination-button-0"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                  >
                    <span
                      class="eui-textTruncate euiButtonEmpty__text"
                    >
                      1
                    </span>
                  </span>
                </button>
              </li>
            </ul>
            <button
              aria-label="Next page"
              class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
              data-test-subj="pagination-button-next"
              disabled=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowRight"
              />
            </button>
          </nav>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Inspector Data View component should support multiple datatables 1`] = `
Array [
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiText emotion-euiText-xs"
      >
        <p
          aria-atomic="true"
          aria-live="polite"
          role="status"
        >
          There are 2 tables in total
        </p>
      </div>
      <div
        class="euiSpacer euiSpacer--xs emotion-euiSpacer-xs"
      />
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <strong>
            Selected:
          </strong>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
            id="inspectorTableChooser"
          >
            <button
              class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-primary"
              data-test-subj="inspectorTableChooser"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  Table 1
                </span>
                <span
                  color="inherit"
                  data-euiicon-type="arrowDown"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="inspectorDownloadData"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-s-defaultMinWidth-base-primary"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            Download CSV
            <span
              color="inherit"
              data-euiicon-type="arrowDown"
            />
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />,
  <div
    class="euiBasicTable insDataTableFormat__table eui-xScroll css-1f59z3t"
    data-test-subj="inspectorTable"
  >
    <div>
      <div
        class="euiTableHeaderMobile"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-l-spaceBetween-baseline-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          />
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiTableSortMobile"
            >
              <div
                class="euiPopover emotion-euiPopover-inline-block"
              >
                <button
                  class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-primary-flush-right"
                  type="button"
                >
                  <span
                    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                  >
                    <span
                      class="eui-textTruncate euiButtonEmpty__text"
                    >
                      Sorting
                    </span>
                    <span
                      color="inherit"
                      data-euiicon-type="arrowDown"
                    />
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <table
        class="euiTable css-0 euiTable--responsive euiTable--auto"
        id="__table_generated-id"
        tabindex="-1"
      >
        <caption
          class="euiTableCaption emotion-euiScreenReaderOnly"
        />
        <thead>
          <tr>
            <th
              aria-live="polite"
              aria-sort="none"
              class="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_1_0"
              role="columnheader"
              scope="col"
            >
              <button
                class="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                type="button"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="column1"
                  >
                    column1
                  </span>
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="euiTableRow"
          >
            <td
              class="euiTableRowCell euiTableRowCell--middle"
            >
              <div
                class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                column1
              </div>
              <div
                class="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <div
                  class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
                >
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    123
                  </div>
                  <div
                    class="euiFlexItem emotion-euiFlexItem-growZero"
                  >
                    <div
                      class="euiFlexGroup emotion-euiFlexGroup-none-flexStart-center-row"
                    />
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <button
              class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
              data-test-subj="tablePaginationPopoverButton"
              type="button"
            >
              <span
                class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
              >
                <span
                  class="eui-textTruncate euiButtonEmpty__text"
                >
                  Rows per page: 20
                </span>
                <span
                  color="inherit"
                  data-euiicon-type="arrowDown"
                />
              </span>
            </button>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <nav
            aria-label="Pagination for table: "
            class="euiPagination emotion-euiPagination"
          >
            <span
              aria-atomic="true"
              aria-relevant="additions text"
              class="emotion-euiScreenReaderOnly"
              role="status"
            >
              Page 1 of 1
            </span>
            <button
              aria-label="Previous page"
              class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
              data-test-subj="pagination-button-previous"
              disabled=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowLeft"
              />
            </button>
            <ul
              aria-label="Pagination for table: "
              class="euiPagination__list emotion-euiPagination__list"
            >
              <li
                class="euiPagination__item"
              >
                <button
                  aria-controls="__table_generated-id"
                  aria-current="true"
                  aria-label="Page 1 of 1"
                  class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
                  data-test-subj="pagination-button-0"
                  disabled=""
                  type="button"
                >
                  <span
                    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                  >
                    <span
                      class="eui-textTruncate euiButtonEmpty__text"
                    >
                      1
                    </span>
                  </span>
                </button>
              </li>
            </ul>
            <button
              aria-label="Next page"
              class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
              data-test-subj="pagination-button-next"
              disabled=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowRight"
              />
            </button>
          </nav>
        </div>
      </div>
    </div>
  </div>,
]
`;
